syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "../pkg/grpc/pb";

service Commands {
    rpc MoveEmployeeToBench(MoveEmployeeToBenchCommand) returns (google.protobuf.Empty);
    rpc AlignEmployeeToProject(AlignEmployeeToProjectCommand) returns (google.protobuf.Empty);
}

message MoveEmployeeToBenchCommand {
    string employee_id = 1;
    string employee_name = 2;
}

message AlignEmployeeToProjectCommand {
    string employee_id = 1;
    string employee_name = 2;

    string project_id = 3;
    string project_name = 4;

    google.protobuf.Timestamp start_date = 6;
    google.protobuf.Timestamp end_date = 7;
}

message EmployeeMovedToBenchEvent {
    string employee_id = 1;
    string employee_name = 2; 
}

message EmployeeAlignedToProjectEvent {
    string employee_id = 1;
    string project_id = 2;

    google.protobuf.Timestamp start_date = 3;
    google.protobuf.Timestamp end_date = 4;
}